# cstar

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  block.cpp  cmake_install.cmake  compile_commands.json  cs_PreBuffer.h  cs_basic.h  cs_block.h  cs_compile.h  cs_defines.h  cs_errors.h  cs_exec.h  cs_global.h  cs_interpret.h  cstar  ctype.h  displays.cpp  displays.hpp  errors.cpp  exec.cpp  exec.hpp  execlib.cpp  expression.cpp  flags.hpp  interpret.cpp  interpret.hpp  lexer.cpp  math.h  mpi.h  program.cpp  statement.cpp  stdlib.h  string.h
.cache/clangd/index/: block.cpp.307A75EF8C69FE45.idx  block.cpp.F731F76C254E5B61.idx  cs_PreBuffer.h.B315C40FA92E2AB8.idx  cs_PreBuffer.h.C3D307713B486DC1.idx  cs_basic.h.174A49BAD1DD80C7.idx  cs_basic.h.1899A71032771A45.idx  cs_block.h.5B0AC4CE7A8B3D05.idx  cs_block.h.F819CA7BA098847C.idx  cs_compile.h.05C75C2049C1C588.idx  cs_compile.h.A087DF920591823F.idx  cs_defines.h.A160219445DBEC03.idx  cs_defines.h.A219FB7BB7DD6D67.idx  cs_errors.h.869B4C51548227A0.idx  cs_errors.h.883C37A350364767.idx  cs_exec.h.A8A8AAEB2F19A28E.idx  cs_exec.h.E505A46F2F00FA3D.idx  cs_global.h.43F8EE88379B085C.idx  cs_global.h.B17C2DC7BBD2E5EC.idx  cs_interpret.h.6CFBDCAE9C028F98.idx  cs_interpret.h.AB36721F453DEDCD.idx  displays.cpp.6F074EE77313EF42.idx  displays.cpp.8C609ACC67E21104.idx  errors.cpp.4E53004BF9ACBD32.idx  errors.cpp.AA7300A4919E22E3.idx  exec.cpp.21365663CFDDFB4A.idx  exec.cpp.E8773DDC35C9C8C2.idx  execlib.cpp.8C311E70648C7962.idx  execlib.cpp.D692CB46705CEC9A.idx  expression.cpp.20307AC9B3ADB0FD.idx  expression.cpp.43FD10BBD21A4131.idx  interpret.cpp.43AB7241D5A69F89.idx  interpret.cpp.E0B219438744B9A2.idx  lexer.cpp.09D36B54FF471A36.idx  lexer.cpp.7CA25348382F665B.idx  program.cpp.013BC1E7FFED0CD4.idx  program.cpp.FD9A9D86358FED3A.idx  statement.cpp.A9273C4A23172D8D.idx  statement.cpp.C2DCCA0E2207A9BD.idx
